--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,8 +60,12 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 
-    implementation  'com.github.bumptech.glide:glide:4.11.0'
-    implementation   'com.github.bumptech.glide:compiler:4.11.0'
+//    implementation  'com.github.bumptech.glide:glide:4.11.0'
+//    annotationProcessor   'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'org.greenrobot:eventbus:3.1.1'
 
@@ -69,11 +73,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0' //2.9.0 2.6.1
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'//ConverterFactory的Gson依赖包
 
-
     //flow
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1" //1.5.1 1.3.3
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'//lifecycleScope
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'//viewModelScope
 
+    implementation 'com.tencent:mmkv-static:1.2.10'
 }
