--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,8 @@ dependencies {
     implementation 'com.tencent:mmkv-static:1.2.10'
 
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
+
+    implementation 'io.github.youth5201314:banner:2.2.2'
+
+    implementation 'com.github.hackware1993:MagicIndicator:1.7.0' // for androidx
 }
