--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,8 @@ dependencies {
     implementation 'io.github.youth5201314:banner:2.2.2'
 
     implementation 'com.github.hackware1993:MagicIndicator:1.7.0' // for androidx
+
+
+    implementation  'com.scwang.smart:refresh-layout-kernel:2.0.3'      //核心必须依赖
+    implementation  'com.scwang.smart:refresh-header-classics:2.0.3'    //经典刷新头
 }
