--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
-
+//apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -43,9 +44,18 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    configurations {
+        cleanedAnnotations
+        compile.exclude group: 'org.jetbrains' , module:'annotations'
+    }
 }
 
 dependencies {
+
+    final def markwon_version = "4.6.2"
+    final def prism_version = "2.0.0"
+
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -88,7 +98,20 @@ dependencies {
 
     implementation 'com.github.hackware1993:MagicIndicator:1.7.0' // for androidx
 
-
     implementation  'com.scwang.smart:refresh-layout-kernel:2.0.3'      //核心必须依赖
     implementation  'com.scwang.smart:refresh-header-classics:2.0.3'    //经典刷新头
+
+
+
+    // Markwon是一个适用于 Android 的Markdown库：https://noties.io/Markwon/
+    implementation "io.noties.markwon:core:$markwon_version"
+    implementation "io.noties.markwon:html:$markwon_version"
+    // implementation "io.noties.markwon:image:$markwon_version"
+    implementation "io.noties.markwon:image-glide:$markwon_version"
+    implementation "io.noties:prism4j:${prism_version}"
+    kapt "io.noties:prism4j-bundler:${prism_version}"
+    implementation "io.noties.markwon:syntax-highlight:$markwon_version"
+    // 自动生成语法高亮类的注解处理器
+    annotationProcessor "io.noties:prism4j-bundler:${prism_version}"
+
 }
