--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SobDemo">
-        <activity android:name=".HomeActivity"/>
-        <activity android:name=".LookForPasswordActivity"/>
+        <activity android:name=".TabContentActivity"></activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".LookForPasswordActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
