--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SobDemo">
-        <activity android:name=".TabContentActivity"></activity>
+
+        <meta-data
+            android:name="com.example.manager.HttpGlideMoudle"
+            android:value="AppGlideModule" />
+
+        <activity
+            android:name=".TabContentActivity"
+            android:configChanges="keyboardHidden|orientation" />
+
         <activity android:name=".HomeActivity" />
+
         <activity android:name=".LookForPasswordActivity" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,6 +32,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
         <activity android:name="base.BaseActivity" />
     </application>
 
