--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
 }
-//apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
@@ -114,5 +113,15 @@ dependencies {
 
     implementation  'com.scwang.smart:refresh-layout-kernel:2.0.3'      //核心必须依赖
     implementation  'com.scwang.smart:refresh-header-classics:2.0.3'    //经典刷新头
+
+
+    implementation 'me.drakeet.multitype:multitype:4.0.0-alpha3'
+
+    //圆角圆形图片控件 主要是可以带边框
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    //屏幕适配
+    implementation 'me.jessyan:autosize:1.1.2'
+
 
 }
