--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,14 @@
             android:name="com.example.manager.HttpGlideMoudle"
             android:value="AppGlideModule" />
 
+        <meta-data
+            android:name="design_width_in_dp"
+            android:value="360"/>
+        <meta-data
+            android:name="design_height_in_dp"
+            android:value="640"/>
+
+
         <activity
             android:name=".TabContentActivity"
             android:configChanges="keyboardHidden|orientation" />
