--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
         viewBinding = true
     }
 
+    kapt.includeCompileClasspath = false
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -42,23 +45,18 @@ android {
         }
     }
 
-    sourceSets{
-        main{
-            jniLibs.srcDirs=['libs']
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-
     configurations {
         cleanedAnnotations
-        compile.exclude group: 'org.jetbrains' , module:'annotations'
+        compile.exclude group: 'org.jetbrains', module: 'annotations'
     }
 }
 
@@ -85,11 +83,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation"com.github.bumptech.glide:okhttp3-integration:4.9.0"
-    annotationProcessor'androidx.annotation:annotation:1.1.0'
+    implementation "com.github.bumptech.glide:okhttp3-integration:4.9.0"
+    annotationProcessor 'androidx.annotation:annotation:1.1.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
-
-
 
     implementation 'org.greenrobot:eventbus:3.1.1'
 
@@ -111,8 +107,8 @@ dependencies {
 
     implementation 'com.github.hackware1993:MagicIndicator:1.7.0' // for androidx
 
-    implementation  'com.scwang.smart:refresh-layout-kernel:2.0.3'      //核心必须依赖
-    implementation  'com.scwang.smart:refresh-header-classics:2.0.3'    //经典刷新头
+    implementation 'com.scwang.smart:refresh-layout-kernel:2.0.3'      //核心必须依赖
+    implementation 'com.scwang.smart:refresh-header-classics:2.0.3'    //经典刷新头
 
 
     implementation 'me.drakeet.multitype:multitype:4.0.0-alpha3'
@@ -123,5 +119,10 @@ dependencies {
     //屏幕适配
     implementation 'me.jessyan:autosize:1.1.2'
 
+
+    def roomVersion = "2.3.0"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    implementation "androidx.room:room-ktx:$roomVersion"
 
 }
