--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -120,10 +120,15 @@ dependencies {
     implementation 'me.jessyan:autosize:1.1.2'
 
 
+/*
     def roomVersion = "2.3.0"
+    // Room 数据库
     implementation "androidx.room:room-runtime:$roomVersion"
-    implementation "androidx.room:room-ktx:$roomVersion"
+    // 使用 Kotlin 注解处理工具 (kapt)
     kapt "androidx.room:room-compiler:$roomVersion"
+    // 对 Room 的 Kotlin 扩展和协程支持
+    implementation "androidx.room:room-ktx:$roomVersion"
+*/
 
     implementation 'com.blankj:utilcodex:1.30.6'
 }
